src/css/ui.css
:root {
  --border-radius-box: 6px;
  --border-radius-control: 4px;
  --color-black: rgb(33, 37, 42);
  --color-blue: rgb(5, 116, 228);
  --color-blue-dark: rgb(0, 87, 191);
  --color-blue-translucent: rgba(5, 116, 228, .1);
  --color-dark-border: rgb(54, 57, 89);
  --color-green: rgb(16, 138, 3);
  --color-green-dark: rgb(14, 117, 3);
  --color-red: rgb(215, 0, 34);
  --color-red-dark: rgb(183, 0, 29);
  --color-separator: rgb(210, 210, 210);
  --color-white: rgb(255, 255, 255);
}

body {
  margin: 0;
  font-family: Verdana, sans-serif;
  font-size: 1rem;
  background: var(--color-white);
  color: var(--color-black);
}

h2, h3 {
  margin: 18px 0;
  font-size: 1.125rem;
}

a {
  color: var(--color-blue);
  text-decoration: none;
  transition: color ease 250ms;

  &:hover {
    color: var(--color-blue-dark);
  }
}

button {
  appearance: none;
  padding: 0;
  border: 0;
  background-color: transparent;
  color: inherit;
  font-family: inherit;
  cursor: pointer;
}

a, button {
  &:focus-visible {
    border-radius: var(--border-radius-control);
    outline: 2px solid var(--color-blue);
    outline-offset: 2px;
  }
}

.button {
  display: inline-block;
  position: relative;
  padding: 8px 15px;
  transform: perspective(1px) translateZ(0);
  border: none;
  border-radius: var(--border-radius-control);
  background: var(--color-blue);
  color: var(--color-white);
  font-size: .9rem;
  overflow: hidden;
  transition: all ease 350ms;

  &::before {
    content: '';
    position: absolute;
    z-index: -1;
    inset: 0;
    transform: scaleX(0);
    background: var(--color-blue-dark);
    transform-origin: 0 50%;
    transition-property: transform;
    transition-duration: 500ms;
    transition-timing-function: ease-out;
  }

  &:hover {
    color: var(--color-white);

    &::before {
      transform: scaleX(1);
      transition-timing-function: cubic-bezier(.52, 1.64, .37, .66);
    }
  }
}

hr {
  margin: 20px 0;
  height: 1px;
  border: 0;
  background-color: var(--color-separator);
}

label {
  cursor: pointer;
}

input[type='text'], input[type='url'], textarea {
  box-sizing: border-box;
  width: 100%;
  border: 2px solid var(--color-dark-border);
  border-radius: var(--border-radius-control);
  outline: 0;
  transition: border ease 250ms;
}

input[type='text'], input[type='url'] {
  padding: 0 10px;
  height: 30px;
}

textarea {
  padding: 10px;
  min-height: 100px;
  font-family: inherit;
  font-size: .8rem;
  resize: vertical;
}

input, textarea {
  &.invalid-input-style {
    border-color: var(--color-red);
  }

  &:focus {
    border-color: var(--color-blue-dark);
  }
}

.hidden {
  display: none;
}

#page-container {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

#header {
  flex-shrink: 0;
  height: 100px;
  background: var(--color-white);
  border-bottom: 1px solid var(--color-separator);
  transition: height 250ms ease-in-out;
}

#logo {
  display: flex;
  align-items: center;
  box-sizing: border-box;
  padding: 25px;
  height: 100%;

  img {
    max-width: 100%;
    height: auto;
  }
}

#main {
  flex: 1 1 auto;
  overflow-y: auto;
  display: flex;
}

#generator-form, #secondary-section {
  flex-grow: 1;
  flex-basis: 0;
  padding: 0 20px 20px;
  height: calc(100% - 20px);
  overflow: auto;
}

#footer {
  flex-shrink: 0;
  padding: 0 20px;
  height: 64px;
  line-height: 64px;
  font-size: .875rem;
  border-top: 1px solid var(--color-separator);
  background: var(--color-white);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  a {
    display: block;
    padding-left: 40px;
    background-image: url('../images/sh-at.webp');
    background-repeat: no-repeat;
    background-size: 32px 32px;
    background-position: left center;
    color: var(--color-black);
    text-decoration: none;
  }
}

.options-block-container {
  &:not(:has(.policy-container:not(.hidden))) {
    display: none;
  }
}

.policy-container {
  position: relative;
  margin-bottom: 5px;
  padding-left: 30px;
  padding-top: 3px;

  &.excluded {
    cursor: not-allowed;
    opacity: .5;

    label, label::before {
      cursor: not-allowed;
    }
  }

  > label {
    padding-right: 30px;
  }

  > .options {
    margin-top: 10px;
    margin-bottom: 15px;

    &.disabled {
      display: none;
    }
  }
}

.boolean-wrapper {
  position: relative;
  margin-top: 10px;
  padding-left: 30px;
  padding-top: 4px;

  .label {
    margin-block: 0;
  }
}

.visually-hidden, .checkbox {
  position: absolute;
  width: 1px;
  height: 1px;
  overflow: hidden;
  clip-path: inset(50%);
  white-space: nowrap;
}

.checkbox {
  &:checked {
    + label::before {
      top: -1px;
      left: -3px;
      width: 8px;
      height: 17px;
      transform: rotate(40deg);
      border: 2px solid transparent;
      border-right-color: var(--color-green);
      border-bottom-color: var(--color-green);
      transform-origin: 100% 100%;
      backface-visibility: hidden;
    }
  }

  &:not(:checked) {
    + label {
      &::before {
        border-radius: var(--border-radius-control);
      }
    }
  }

  &:focus-visible {
    + label::after {
      border: 2px solid transparent;
      border-radius: var(--border-radius-control);
      outline: 2px solid var(--color-blue);
      outline-offset: 2px;
    }
  }

  + label {
    margin-left: -30px;
    padding-left: 30px;

    &::before, &::after {
      content: '';
      position: absolute;
      z-index: 0;
      top: 1px;
      left: 0;
      margin-top: 2px;
      width: 18px;
      height: 18px;
    }

    &::before {
      border: 2px solid var(--color-dark-border);
      cursor: pointer;
      transition: all 250ms ease;
    }
  }
}

.object-label {
  margin-top: 15px;
  margin-bottom: 10px;
  width: calc(100% - 60px);
  font-weight: 700;
  font-size: .875rem;

  &:has(+ .array-container) {
    margin-bottom: 15px;
  }
}
/* ... */

